# SekiroDisableCameraAutoRotate

./: CMakeLists.txt  LICENSE  README.md  README_old.md  README_zh.md  dllmain.cpp
.github/workflows/: build.yml
